# cpp-atlas

./: .gitignore  CMakeLists.txt  LICENSE  README.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
_codeql_build_dir/src/: CppAtlas  cmake_install.cmake
_codeql_build_dir/src/CppAtlasLib_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/src/CppAtlasLib_autogen/DGKZTCOIDE/: moc_mainwindow.cpp.d
_codeql_build_dir/src/CppAtlasLib_autogen/EZC5ESNXS2/: moc_FileManager.cpp.d  moc_Project.cpp.d
_codeql_build_dir/src/CppAtlasLib_autogen/FN73PALC2B/: moc_CodeEditor.cpp.d  moc_EditorTabWidget.cpp.d
_codeql_build_dir/src/CppAtlasLib_autogen/G5WWGH5X6V/: moc_BuildOutputWidget.cpp.d  moc_OutputPanel.cpp.d  moc_ProblemsWidget.cpp.d  moc_RunOutputWidget.cpp.d
_codeql_build_dir/src/CppAtlasLib_autogen/GAHUQPC7KX/: moc_FileTreeWidget.cpp.d  moc_FindReplaceDialog.cpp.d  moc_GotoLineDialog.cpp.d  moc_ThemeManager.cpp.d
_codeql_build_dir/src/CppAtlas_autogen/: deps
_codeql_build_dir/tests/: CppAtlasTests  cmake_install.cmake
_codeql_build_dir/tests/CppAtlasTests_autogen/: deps  moc_predefs.h
docs/: DB_REBASELINE_V4_ROLLOUT.md  admin_workflow.md
include/: mainwindow.h
include/compiler/: ClangCompiler.h  CompileRequest.h  CompileResult.h  CompilerRegistry.h  GccCompiler.h  ICompiler.h
include/core/: AppSettings.h  DevBuildGuard.h  FileManager.h  Project.h  ProjectManager.h  RecentProjectsManager.h
include/editor/: CodeEditor.h  EditorTabWidget.h
include/output/: BuildOutputWidget.h  OutputPanel.h  ProblemsWidget.h  RunOutputWidget.h  TerminalWidget.h
include/quiz/: AdaptiveSystem.h  AdminAccessController.h  AdminContentService.h  AdminPatchWorkflowService.h  AnswerEvaluationService.h  ContentPatchService.h  ContentValidationService.h  ExportCrypto.h  ProgressAnalyzer.h  QuizContentExporter.h  QuizDatabase.h  QuizEngine.h  QuizExporter.h  QuizRepository.h  UserManager.h
include/tools/: AssemblyRunner.h  BenchmarkResult.h  BenchmarkRunner.h  CppInsightsRunner.h  IToolRunner.h  ToolsConfig.h
include/ui/: AdminContentMaintenanceWidget.h  AdminQuestionEditorDialog.h  AdminQuizEditorDialog.h  AnalysisPanel.h  AssemblyWidget.h  AtlasDialog.h  AvatarUtils.h  BenchmarkChartWidget.h  BenchmarkWidget.h  CustomTestBuilderWidget.h  FileTreeWidget.h  FindReplaceDialog.h  GotoLineDialog.h  InsightsWidget.h  LoginDialog.h  NewFileDialog.h  NewProjectDialog.h  QuizAdminPanel.h  QuizModeWindow.h  QuizResultsWidget.h  QuizSelectionWidget.h  QuizSessionWidget.h  SettingsDialog.h  ThemeManager.h  UserProfileWidget.h  WelcomeScreen.h  WelcomeWidget.h
include/vcs/: GitManager.h  GitPanelWidget.h
resources/: cpp-atlas_hy_AM.ts  resources.qrc
resources/config/: compilers.json  tools.json
resources/db/: schema.sql  seed_data.sql
resources/db/patches/: 2026_03_16_00_fill_blank_answer_keys_schema.sql  2026_03_16_01_difficulty_normalization.sql  2026_03_16_02_fill_blank_bulk_migration.sql  2026_03_16_03_fill_blank_full_repair.sql  2026_03_16_04_fill_blank_quality_checks.sql  2026_03_16_admin_patch_journal.sql  2026_03_16_all_quizzes_pack_05_difficulty_fix.sql  2026_03_16_core_cpp_pack_02.sql  2026_03_16_core_cpp_pack_02_part1.sql  2026_03_16_core_cpp_pack_02_part2.sql  2026_03_16_core_cpp_pack_02_part3.sql  2026_03_16_fill_blank_answer_key_hotfix.sql  2026_03_16_fill_blank_answer_keys_schema.sql  2026_03_16_foundations_pack_01.sql  2026_03_16_foundations_pack_01_part1.sql  2026_03_16_foundations_pack_01_part2.sql  2026_03_16_foundations_pack_01_part3.sql  2026_03_16_memory_concurrency_pack_05_part1.sql  2026_03_16_memory_concurrency_pack_05_part2.sql  2026_03_16_memory_concurrency_pack_05_part3.sql  2026_03_16_oop_templates_pack_03_part1.sql  2026_03_16_oop_templates_pack_03_part2.sql  2026_03_16_oop_templates_pack_03_part3.sql  2026_03_16_oop_templates_pack_03_part4.sql  2026_03_16_stl_modern_pack_04_part1.sql  2026_03_16_stl_modern_pack_04_part2.sql  2026_03_16_stl_modern_pack_04_part3.sql  2026_03_16_stl_modern_pack_04_part4.sql
resources/templates/: benchmark_template.cpp  class.cpp.template  class.hpp.template  header.h.template  header.hpp.template  main.cpp  source.c.template
src/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/compiler/: ClangCompiler.cpp  CompilerRegistry.cpp  GccCompiler.cpp
src/core/: AppSettings.cpp  FileManager.cpp  Project.cpp  ProjectManager.cpp  RecentProjectsManager.cpp
src/editor/: CodeEditor.cpp  EditorTabWidget.cpp
src/output/: BuildOutputWidget.cpp  OutputPanel.cpp  ProblemsWidget.cpp  RunOutputWidget.cpp  TerminalWidget.cpp
src/quiz/: AdaptiveSystem.cpp  AdminAccessController.cpp  AdminContentService.cpp  AdminPatchWorkflowService.cpp  AnswerEvaluationService.cpp  ContentPatchService.cpp  ContentValidationService.cpp  ExportCrypto.cpp  ProgressAnalyzer.cpp  QuizContentExporter.cpp  QuizDatabase.cpp  QuizEngine.cpp  QuizExporter.cpp  QuizRepository.cpp  UserManager.cpp
src/tools/: AssemblyRunner.cpp  BenchmarkRunner.cpp  CppInsightsRunner.cpp  ToolsConfig.cpp
src/ui/: AdminContentMaintenanceWidget.cpp  AdminQuestionEditorDialog.cpp  AdminQuizEditorDialog.cpp  AnalysisPanel.cpp  AssemblyWidget.cpp  AtlasDialog.cpp  BenchmarkChartWidget.cpp  BenchmarkWidget.cpp  CustomTestBuilderWidget.cpp  FileTreeWidget.cpp  FindReplaceDialog.cpp  GotoLineDialog.cpp  InsightsWidget.cpp  LoginDialog.cpp  NewFileDialog.cpp  NewProjectDialog.cpp  QuizAdminPanel.cpp  QuizModeWindow.cpp  QuizResultsWidget.cpp  QuizSelectionWidget.cpp  QuizSessionWidget.cpp  SettingsDialog.cpp  ThemeManager.cpp  UserProfileWidget.cpp  WelcomeScreen.cpp  WelcomeWidget.cpp
src/vcs/: GitManager.cpp  GitPanelWidget.cpp
tests/: CMakeLists.txt  CompilerRegistryTest.cpp
tests/quiz/: CMakeLists.txt  test_admin_access.cpp  test_admin_content_service.cpp  test_content_patch_service.cpp  test_fill_blank_evaluation.cpp  test_fill_blank_recovery.cpp  test_patch_workflow_rollback.cpp  test_quiz_admin_cli.cpp
tools/quiz_admin/: CMakeLists.txt  QuizAdminCli.cpp  QuizAdminCli.h  README.md  main.cpp
(+4 files in other folders)
